# alibabacloud-ack-mcp-server

./: .env.example  .flake8  .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LLM_CONTEXT.md  MANIFEST.in  Makefile  README.bak.md  README.md  SECURITY.md  alibabacloud-cs-mcp-server.spec  gemini-extension.json  go.mod  go.sum  mcp.json  mypy.ini  pyproject.toml  pytest.ini  qwen-extension.json  requirements.txt  run_sub_server_tests.sh  run_tests.sh  setup.py  test_architecture.py
.github/workflows/: ruff.yml  trivy-scan.yml  uv-test.yml
ack-mcp-server/: .gitignore  Dockerfile  deployment.yaml  fastmcp.txt  requirements.txt
ack-mcp-server/app/: config.py  context.py  models.py
ack-mcp-server/app/middleware/: auth.py  context_injection.py
ack-mcp-server/app/services/: observability_service.py
ack-mcp-server/app/tools/: kubectl_tools.py  registry.py
benchmarks/: README.md  __init__.py  benchmark_main.py  run_benchmark.sh
benchmarks/agents/: kubectl-ai.py
benchmarks/agents/kubectl-ai/: README.md  run_prompt.sh  version.sh
benchmarks/case1_memory_oom_pod_diagnose/: oom_demo_deployment.yaml
benchmarks/results/: 20250918-085849-report.yaml  20250918-090019-report.yaml  20250918-091339-report.yaml  20250918-report.yaml  20250919-14-32-4671bb-report.yaml  20250919-17-31-4273f4-report.yaml  20250930-17-15-820cb3-report.yaml  20250930-17-29-c1dbe2-report.yaml  20250930-17-42-186e10-report.yaml  20250930-17-56-8966c5-report.yaml
benchmarks/tests/: test_benchmark_main.py
deploy/: Dockerfile  MCP_TIMEOUT_CONFIG.md  README.md
deploy/helm/: Chart.yaml  values.yaml
deploy/helm chart/: Chart.yaml  values.yaml
dist_zip/: MANIFEST.in  README.md  setup.py
dist_zip/alibabacloud_cluster_audit_log_mcp_server/: README.md  __init__.py  server.py
dist_zip/lifespan_manager/: pyproject.toml
docs/: SEP-001-20260422-security-and-auth-plan.md
docs/spec/: cli_tool_execution.md  cli_tool_execution_plan.md
helm chart/: Chart.yaml  values.yaml
helm chart/templates/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
src/: TESTING_COVERAGE_README.md  __init__.py  ack_audit_log_handler.py  ack_autoscaling_handler.py  ack_cluster_handler.py  ack_cluster_helpers.py  ack_controlplane_log_handler.py  ack_cost_analysis_handler.py  ack_diagnose_handler.py  ack_inspect_handler.py  ack_prometheus_handler.py  cli.py  config.py  fastmcp.json  kubectl_handler.py  main_server.py  models.py  runtime_provider.py  server.py  setup.py  transport_security.py  verify_all_test_coverage.py
src/ack-addon-management-mcp-server/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  fastmcp.json  handler.py  run_tests.sh  runtime_provider.py  server.py
src/ack-apiserver-log-analysis-mcp-server/: runtime_provider.py
src/ack-cluster-audit-log-analysis-mcp-server/: __init__.py  server.py
src/ack-cluster-management-mcp-server/: TESTING_GUIDE.md  __init__.py  handler.py  pytest.ini  run_tests.sh  runtime_provider.py  server.py
src/ack-diagnose-mcp-server/: README.md  __init__.py  fastmcp.json  handler.py  runtime_provider.py  server.py
src/ack-mcp-server/: DESIGN.md  Dockerfile  README.md  build.sh  pyproject.toml
src/ack-nodepool-management-mcp-server/: __init__.py  handler.py  runtime_provider.py  server.py
src/alibabacloud-ack-cloudresource-monitor-mcp-server/: __init__.py  handler.py  runtime_provider.py  server.py
src/alibabacloud-ack-prometheus-mcp-server/: __init__.py  handler.py  runtime_provider.py
src/alibabacloud-o11y-prometheus-mcp-server/: fastmcp.json  handler.py  runtime_provider.py  server.py
src/alibabacloud-o11y-sls-apiserver-log-mcp-server/: __init__.py  fastmcp.json  handler.py  runtime_provider.py  server.py
src/alibabacloud-o11y-sls-audit-log-analysis-mcp-server/: README.md  __init__.py  fastmcp.json  pyproject.toml  server.py
src/alibabacloud-o11y-sls-audit-log-analysis-mcp-server/context/: lifespan_manager.py
src/alibabacloud-o11y-sls-audit-log-analysis-mcp-server/provider/: provider.py
src/alibabacloud-o11y-sls-audit-log-analysis-mcp-server/test/: test_kube_audit_tool.py  test_lifespan_manager.py
src/alibabacloud-o11y-sls-audit-log-analysis-mcp-server/tests/: verify_test_coverage.py
src/alibabacloud-o11y-sls-audit-log-analysis-mcp-server/toolkits/: kube_aduit_tool.py
src/alibabacloud_cluster_aduit_log_mcp_server/: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  server.py
src/alibabacloud_cluster_audit_log_mcp_server/: __init__.py  config.yaml  server.py
src/clients/: __init__.py  arms_client.py  cs_client.py  sls_client.py  utils.py
src/data/: ack_prometheus_metrics_guidance_cadvisor.json
src/interfaces/: __init__.py  runtime_provider.py
src/k8s-readonly-mcp-server/: main.go
src/k8s_diagnose_mcp_server/: __init__.py  runtime_provider.py  server.py
src/kubernetes-client-mcp-server/: __init__.py  fastmcp.json  handler.py  runtime_provider.py  server.py
src/kubernetes_client_mcp_server/: handler.py  runtime_provider.py  server.py
src/observability_aliyun_cloudmonitor_resource_monitor_mcp_server/: __init__.py  runtime_provider.py  server.py
src/observability_aliyun_prometheus_mcp_server/: __init__.py  runtime_provider.py  server.py
src/observability_sls_cluster_apiserver_log_analysis_mcp_server/: __init__.py  handler.py  runtime_provider.py  server.py
src/prometheus_metrics_guidance/: __init__.py
src/provider/: abstract_provider.py  context.py
src/runtime_provider/: __init__.py  base.py
src/tests/: ack_cluster_handler_test.py  test_ack_audit_log_handler.py  test_ack_cluster_handler.py  test_ack_controlplane_log_handler.py  test_ack_diagnose_handler.py  test_ack_inspect_handler.py  test_ack_prometheus_handler.py  test_architecture.py  test_cli.py  test_clients_utils.py  test_env_integration.py  test_kubeconfig_mode.py  test_kubectl_handler.py  test_lifespan_context_access.py  test_oauth_integration.py  test_runtime_provider_prometheus_guidance.py  verify_all_test_coverage.py
src/utils/: pyproject.toml  utils.py
(+135 files in other folders)
