[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alibabacloud-ack-mcp-server"
version = "1.0.0"
description = "AlibabaCloud Container Service MCP Server (ack-mcp-server)"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "AlibabaCloud", email = "KeyOfSpectator@zju.edu.cn"}
]
keywords = ["mcp", "kubernetes", "alibabacloud", "container-service"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "fastmcp>=2.12.2",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "alibabacloud-cs20151215>=4.9.0",
    "alibabacloud-credentials>=1.0.2",
    "alibabacloud-arms20190808>=10.0.1",
    "alibabacloud-sls20201230>=5.7.0",
    "alibabacloud-tea-util>=0.3.0",
    "alibabacloud-tea-openapi>=0.4.0",
    "kubernetes>=33.0.0",
    "httpx>=0.28.0",
    "requests>=2.32.0",
    "aiohttp>=3.12.0",
    "aiofiles>=24.0.0",
    "cachetools>=5.5.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0.0",
    "setuptools>=61.0",
    "wheel>=0.40.0",
    "build>=1.3.0"
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.scripts]
alibabacloud-ack-mcp-server = "main_server:main"

[project.urls]
Homepage = "https://github.com/aliyun/alibabacloud-ack-mcp-server"
Repository = "https://github.com/aliyun/alibabacloud-ack-mcp-server"
Documentation = "https://github.com/aliyun/alibabacloud-ack-mcp-server#readme"
Issues = "https://github.com/aliyun/alibabacloud-ack-mcp-server/issues"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "tests.*", "*.egg-info"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
py-modules = [
    "ack_audit_log_handler",
    "ack_cluster_handler",
    "ack_controlplane_log_handler",
    "ack_diagnose_handler",
    "ack_inspect_handler",
    "ack_prometheus_handler",
    "kubectl_handler",
    "main_server",
    "models",
    "runtime_provider",
    "config",
]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120