[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lifespan-manager"
version = "0.1.0"
description = "Common utilities for AlibabaCloud MCP projects"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/alibabacloud/utils"
Repository = "https://github.com/alibabacloud/utils.git"

[tool.hatch.build.targets.wheel]
packages = ["lifespan_manager"]

[tool.hatch.metadata]
allow-direct-references = true
